<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideOverlay"
            android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_beacon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="Beacon name"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_text_beacon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_beacon_name"/>

        <TextView
            android:id="@+id/text_title_advertised_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="Advertised ID"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_text_advertised_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_advertised_id" />

        <TextView
            android:id="@+id/text_advertised_id_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="The Advertised ID cannot be blank"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:text="Description"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="140"
            android:hint="@string/hint_description" />

        <TextView
            android:id="@+id/text_title_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="Type"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/text_title_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="Status"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/statuses"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/text_status_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="The beacon status cannot be blank"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_title_stability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:text="Stability"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinner_stability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/stabilities"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/text_title_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:text="Location"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_text_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_latitude" />

        <EditText
            android:id="@+id/edit_text_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_longitude" />

        <TextView
            android:id="@+id/text_title_place_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:inputType="text"
            android:text="Google Places ID"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_text_place_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_latitude" />

    </LinearLayout>

</ScrollView>